@@ -31,7 +31,6 @@ setup(name='cloudooo',
           'PasteDeploy',
           'PasteScript',
           'WSGIUtils',
-          'jsonpickle',
           'psutil',
           'lxml',
       ],
